feature(bookstore-admin): implement add,update and delete functions for bookstore management

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>thymeleaf</artifactId>
             <version>3.0.12.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <properties>
